--- a/src/components/PageBody/index.css
+++ b/src/components/PageBody/index.css
@@ -41,4 +41,9 @@
     position: absolute;
     top: 45%;
     left: 40%;
+    display: flex;
+    align-items: center;
+    > *{
+       margin: 0.2rem; 
+    }
 }
