imporved the logic on where to click so that the text is focused again also removed a bug from navbar when i was clicking on the vertical line

--- a/src/components/PageHeader/index.css
+++ b/src/components/PageHeader/index.css
@@ -9,7 +9,7 @@
     >img{
         border-radius: 50%;
     }
-    >:nth-child(3):hover, :nth-child(4):hover , :nth-child(5):hover{
+    >:nth-child(3):hover, :nth-child(4):hover , :nth-child(5):hover , :nth-child(6):hover{
         cursor: pointer;
         color: #717172;
     }
