--- a/src/components/PageBody/index.css
+++ b/src/components/PageBody/index.css
@@ -12,7 +12,7 @@
 .bodyContentWrapper{
     display: flex;
     justify-content: center;
-    padding: 1rem 0;
+    margin: 1rem 0;
     color: grey;
     position: relative;
     >div{
