--- a/src/components/PageBody/index.css
+++ b/src/components/PageBody/index.css
@@ -47,3 +47,13 @@
        margin: 0.2rem; 
     }
 }
+
+.correct{
+    color: yellow;
+    text-decoration: underline;
+}
+
+.incorrect{
+    color: red;
+    text-decoration: underline;
+}
