--- a/src/components/TestResult/index.css
+++ b/src/components/TestResult/index.css
@@ -3,9 +3,11 @@
     display: flex;
     >:nth-child(1){
         width: 20%;
-        background-color: red;
+        > *{
+            margin: 0.5rem 0;
+        }
         >h1{
-            color: yellow;
+            color: #E2B714;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 5rem;
             font-weight: 80;
@@ -18,6 +20,5 @@
     }
     >:nth-child(2){
         width: 80%;
-        background-color: pink;
     }
 }
