now when the typing speed is zero it will not show nan as accuracy and the graph will show only the speed of zero not 100

--- a/src/components/TestResult/index.css
+++ b/src/components/TestResult/index.css
@@ -36,7 +36,7 @@
             background-color: yellow;
             max-height: 17rem;
             /* border-bottom-right-radius: 1rem; */
-            border-bottom-left-radius: 1rem;
+            /* border-bottom-left-radius: 1rem; */
         }
     }
 }
