--- a/src/components/PageHeader/index.css
+++ b/src/components/PageHeader/index.css
@@ -6,8 +6,12 @@
     > *{
         margin-right: 2rem;
     }
+    >h2{
+        cursor: pointer;
+    }
     >img{
         border-radius: 50%;
+        cursor: pointer;
     }
     >:nth-child(3):hover, :nth-child(4):hover , :nth-child(5):hover , :nth-child(6):hover{
         cursor: pointer;
