--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,22 @@
   color: white;
   width: 100vw;
   height: 100vh;
+
+  .capsLockBox{
+    position: fixed; 
+    top: 3rem; 
+    left: 50%; 
+    transform: translateX(-50%); 
+    background-color: yellow; 
+    padding: 10px; 
+    text-align: center; 
+    z-index: 1000; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    border-radius: 5px; 
+    color: black;
+    >* {
+      margin: 0 0.3rem;
+    }
+  }
 }
 
