--- a/src/components/PageNavbar/index.css
+++ b/src/components/PageNavbar/index.css
@@ -16,6 +16,7 @@
         >div{
             display: flex;
             align-items: center;
+            padding: 0.2;
         }
         >div:hover{
             cursor: pointer;
